# dathan

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: base16_default.toml  default.toml
src/: grammar.rs  highlight.rs  languages.rs  main.rs  queries.rs  runtime.rs  style.rs  theme.rs
src/backend/: hiccup.rs  html.rs  html_inline.rs  json_hiccup.rs  mod.rs  terminal.rs
