[package]
name = "dathan"
version = "0.1.1"
edition = "2021"
description = "Highlight source code to HTML or Clojure/EDN Hiccup using Helix's tree-sitter grammars"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
tree-house = { version = "0.3.0", default-features = false }
