[package]
name = "dathan"
version = "0.7.3"
edition = "2021"
description = "Highlight source code to HTML, Hiccup (EDN/JSON), or ANSI terminal output using Helix's tree-sitter grammars"
license = "MIT"
repository = "https://github.com/waddie/dathan"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
tree-house = { version = "0.4.0", default-features = false }
